a few new menu discoveries